tests/baselines/reference/functionOverloads17.errors.txt
functionOverloads17.ts(1,10): error TS2394: This overload signature is not compatible with its implementation signature.


==== functionOverloads17.ts (1 errors) ====
    function foo():{a:number;}
             ~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 functionOverloads17.ts:2:10: The implementation signature is declared here.
    function foo():{a:string;} { return {a:""} }
    